--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     padding: 20px;
     border-radius: 10px;
     width: 30%;
-    margin: 100px auto;
+    margin: 100px auto 20px;
     display: flex;
     justify-content: space-between;
 }
@@ -11,4 +11,27 @@
 .game-buttons > button {
     flex: 1;
     margin: 10px;
+}
+
+.choices {
+    border: 1px solid gray;
+    padding: 20px;
+    border-radius: 10px;
+    width: 30%;
+    margin: 10px auto 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.choices > div {
+    flex: 1;
+}
+
+.message {
+    width: 30%;
+    margin: auto;
+    text-align: center;
+    border: 1px solid gray;
+    border-radius: 10px;
+    padding: 20px;
 }
