--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ hr {
   width: 30%;
   border-radius: 10px;
   margin: 10px auto;
-  padding: 20px;
+  padding: 10px;
 }
 
 .game-buttons,
@@ -55,4 +55,24 @@ hr {
 
 .message-section {
   text-align: center;
+}
+
+table {
+  width: 100%;
+  text-align: center;
+  table-layout: fixed;
+  border: 1px solid gray;
+}
+
+th {
+  background-color: rgb(196, 185, 185);
+}
+
+td {
+  background-color: aliceblue;
+}
+
+td,
+th {
+  margin: 2px;
 }
