--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,28 @@
-h1,
+body {
+  background-color: #1f2937;
+}
+header,
+footer {
+  background-color: #1f2937;
+  color: #f9faf8;
+  padding: 5px;
+  text-align: center;
+}
+
+a {
+  color: #f9faf8;
+  text-decoration: dashed;
+}
+
+button {
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+h1 {
+  margin: 0;
+}
+
 h2 {
   text-align: center;
 }
@@ -58,6 +82,10 @@ hr {
 
 .message-section {
   text-align: center;
+}
+
+.message {
+  color: #f9faf8;
 }
 
 table {
